# mae_macros

./: Cargo.toml  LICENSE  README.md  deny.exceptions.toml  deny.toml
.ci/: ci_env.toml
.github/workflows/: rust-integrity-guard.yaml
scripts/: smoke-test.sh
src/: lib.rs  util.rs
tests/: common.rs  lib.rs
